# flask-task-manager-api

./: .env.example  .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  init_db.py  package.json  pyproject.toml
app/: __init__.py  config.py  main.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_tasks.py  test_users.py
